src/test/ui/self/arbitrary_self_types_pin_lifetime_impl_trait.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait.rs:6:31
   |
LL |     fn f(self: Pin<&Self>) -> impl Clone { self }
   |                               ^^^^^^^^^^
   |
note: hidden type `Pin<&Foo>` captures lifetime smaller than the function body
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait.rs:6:31
   |
LL |     fn f(self: Pin<&Self>) -> impl Clone { self }
   |                               ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
